interpreter/edbs/EDBSParser.py
# Generated from EDBS.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class EDBSParser ( Parser ):

    grammarFileName = "EDBS.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'FERDIG.'", "'.'", "':'", "','", "'''", 
                     "'SKRIV'", "'REKN'", "'GJENTAR'", "'MEDAN'", "'OPPDATER'", 
                     "'DEFINER EIT MODUL'", "'MED'", "'INN'", "'UT'", "'SOM'", 
                     "'MODUL'", "'AVSLUT'", "'KALL'", "'FIL'", "'i'", "'LES'", 
                     "'NESTE'", "'LENGDE'", "'AV'", "'!'", "'IKKJE'", "'OG'", 
                     "'ELLER'", "'-'", "'+'", "'/'", "'*'", "'='", "'<'", 
                     "'<='", "'>'", "'>='", "'('", "')'", "'++'", "'**'", 
                     "'//'", "'--'", "'neste'", "'finn'", "'f\\u00F8rre'", 
                     "'tilbakestill'", "'til'", "'<tom>'", "'<linjeskift>'", 
                     "'<tomrom>'" ]

    symbolicNames = [ "<INVALID>", "FINISH_KEYWORD", "PERIOD", "COLON", 
                      "COMMA", "PRIMED", "WRITE_KEYWORD", "CALC_KEYWORD", 
                      "REPEAT_KEYWORD", "CONDITION_KEYWORD", "UPDATE_KEYWORD", 
                      "DEF_MOULE_KEYWORD", "MODULE_PARAM_KEYWORD", "INPUT_PARAM_KEYWORD", 
                      "OUTPUT_PARAM_KEYWORD", "MODULE_BODY_KEYWORD", "MODULE_KEYWORD", 
                      "EXIT_KEYWORD", "CALL_MODULE_KEYWORD", "FILE_KEYWORD", 
                      "IN_KEYWORD", "READ_KEYWORD", "NEXT_KEYWORD", "LENGTH_KEYWORD", 
                      "OF_KEYWORD", "EXCLAMATION", "BOP_NOT", "BOP_AND", 
                      "BOP_OR", "OP_SUB", "OP_ADD", "OP_DIV", "OP_MUL", 
                      "COMP_EQL", "COMP_LT", "COMP_LEQ", "COMP_GT", "COMP_GEQ", 
                      "OPEN_PAREN", "CLOSE_PAREN", "SOP_CONCAT", "SOP_REPEAT", 
                      "SOP_SPLIT", "SOP_SUBSTR", "LOP_NEXT", "LOP_FIND", 
                      "LOP_BACK", "LOP_RESET", "LOP_RESET_IDX", "NULL_CHAR", 
                      "NEWLINE_CHAR", "WHITESPACE_CHAR", "STRING", "IDENTIFIER", 
                      "NUMBER", "COMMENT", "NEWLINE", "WHITESPACE" ]

    RULE_program = 0
    RULE_module_def = 1
    RULE_input_params = 2
    RULE_output_params = 3
    RULE_module_body = 4
    RULE_param_list = 5
    RULE_main_stmt = 6
    RULE_statement = 7
    RULE_write_arg = 8
    RULE_expr_op = 9
    RULE_actual_param_list = 10
    RULE_actual_param = 11
    RULE_list_command = 12
    RULE_str_literal = 13
    RULE_bool_expr = 14
    RULE_comparison = 15

    ruleNames =  [ "program", "module_def", "input_params", "output_params", 
                   "module_body", "param_list", "main_stmt", "statement", 
                   "write_arg", "expr_op", "actual_param_list", "actual_param", 
                   "list_command", "str_literal", "bool_expr", "comparison" ]

    EOF = Token.EOF
    FINISH_KEYWORD=1
    PERIOD=2
    COLON=3
    COMMA=4
    PRIMED=5
    WRITE_KEYWORD=6
    CALC_KEYWORD=7
    REPEAT_KEYWORD=8
    CONDITION_KEYWORD=9
    UPDATE_KEYWORD=10
    DEF_MOULE_KEYWORD=11
    MODULE_PARAM_KEYWORD=12
    INPUT_PARAM_KEYWORD=13
    OUTPUT_PARAM_KEYWORD=14
    MODULE_BODY_KEYWORD=15
    MODULE_KEYWORD=16
    EXIT_KEYWORD=17
    CALL_MODULE_KEYWORD=18
    FILE_KEYWORD=19
    IN_KEYWORD=20
    READ_KEYWORD=21
    NEXT_KEYWORD=22
    LENGTH_KEYWORD=23
    OF_KEYWORD=24
    EXCLAMATION=25
    BOP_NOT=26
    BOP_AND=27
    BOP_OR=28
    OP_SUB=29
    OP_ADD=30
    OP_DIV=31
    OP_MUL=32
    COMP_EQL=33
    COMP_LT=34
    COMP_LEQ=35
    COMP_GT=36
    COMP_GEQ=37
    OPEN_PAREN=38
    CLOSE_PAREN=39
    SOP_CONCAT=40
    SOP_REPEAT=41
    SOP_SPLIT=42
    SOP_SUBSTR=43
    LOP_NEXT=44
    LOP_FIND=45
    LOP_BACK=46
    LOP_RESET=47
    LOP_RESET_IDX=48
    NULL_CHAR=49
    NEWLINE_CHAR=50
    WHITESPACE_CHAR=51
    STRING=52
    IDENTIFIER=53
    NUMBER=54
    COMMENT=55
    NEWLINE=56
    WHITESPACE=57

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FINISH_KEYWORD(self):
            return self.getToken(EDBSParser.FINISH_KEYWORD, 0)

        def module_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EDBSParser.Module_defContext)
            else:
                return self.getTypedRuleContext(EDBSParser.Module_defContext,i)


        def main_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EDBSParser.Main_stmtContext)
            else:
                return self.getTypedRuleContext(EDBSParser.Main_stmtContext,i)


        def NEWLINE(self):
            return self.getToken(EDBSParser.NEWLINE, 0)

        def getRuleIndex(self):
            return EDBSParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = EDBSParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==11:
                self.state = 32
                self.module_def()
                self.state = 37
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2229696) != 0):
                self.state = 38
                self.main_stmt()
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 44
            self.match(EDBSParser.FINISH_KEYWORD)
            self.state = 46
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==56:
                self.state = 45
                self.match(EDBSParser.NEWLINE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Module_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF_MOULE_KEYWORD(self):
            return self.getToken(EDBSParser.DEF_MOULE_KEYWORD, 0)

        def IDENTIFIER(self):
            return self.getToken(EDBSParser.IDENTIFIER, 0)

        def MODULE_PARAM_KEYWORD(self):
            return self.getToken(EDBSParser.MODULE_PARAM_KEYWORD, 0)

        def input_params(self):
            return self.getTypedRuleContext(EDBSParser.Input_paramsContext,0)


        def output_params(self):
            return self.getTypedRuleContext(EDBSParser.Output_paramsContext,0)


        def MODULE_BODY_KEYWORD(self):
            return self.getToken(EDBSParser.MODULE_BODY_KEYWORD, 0)

        def COLON(self):
            return self.getToken(EDBSParser.COLON, 0)

        def module_body(self):
            return self.getTypedRuleContext(EDBSParser.Module_bodyContext,0)


        def EXIT_KEYWORD(self):
            return self.getToken(EDBSParser.EXIT_KEYWORD, 0)

        def MODULE_KEYWORD(self):
            return self.getToken(EDBSParser.MODULE_KEYWORD, 0)

        def PERIOD(self):
            return self.getToken(EDBSParser.PERIOD, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(EDBSParser.NEWLINE)
            else:
                return self.getToken(EDBSParser.NEWLINE, i)

        def getRuleIndex(self):
            return EDBSParser.RULE_module_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModule_def" ):
                listener.enterModule_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModule_def" ):
                listener.exitModule_def(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModule_def" ):
                return visitor.visitModule_def(self)
            else:
                return visitor.visitChildren(self)




    def module_def(self):

        localctx = EDBSParser.Module_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_module_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(EDBSParser.DEF_MOULE_KEYWORD)
            self.state = 49
            self.match(EDBSParser.IDENTIFIER)
            self.state = 50
            self.match(EDBSParser.MODULE_PARAM_KEYWORD)
            self.state = 52
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==56:
                self.state = 51
                self.match(EDBSParser.NEWLINE)


            self.state = 54
            self.input_params()
            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==56:
                self.state = 55
                self.match(EDBSParser.NEWLINE)


            self.state = 58
            self.output_params()
            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==56:
                self.state = 59
                self.match(EDBSParser.NEWLINE)


            self.state = 62
            self.match(EDBSParser.MODULE_BODY_KEYWORD)
            self.state = 63
            self.match(EDBSParser.COLON)
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==56:
                self.state = 64
                self.match(EDBSParser.NEWLINE)


            self.state = 67
            self.module_body()
            self.state = 68
            self.match(EDBSParser.EXIT_KEYWORD)
            self.state = 69
            self.match(EDBSParser.MODULE_KEYWORD)
            self.state = 70
            self.match(EDBSParser.PERIOD)
            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==56:
                self.state = 71
                self.match(EDBSParser.NEWLINE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Input_paramsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INPUT_PARAM_KEYWORD(self):
            return self.getToken(EDBSParser.INPUT_PARAM_KEYWORD, 0)

        def COLON(self):
            return self.getToken(EDBSParser.COLON, 0)

        def param_list(self):
            return self.getTypedRuleContext(EDBSParser.Param_listContext,0)


        def getRuleIndex(self):
            return EDBSParser.RULE_input_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInput_params" ):
                listener.enterInput_params(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInput_params" ):
                listener.exitInput_params(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInput_params" ):
                return visitor.visitInput_params(self)
            else:
                return visitor.visitChildren(self)




    def input_params(self):

        localctx = EDBSParser.Input_paramsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_input_params)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(EDBSParser.INPUT_PARAM_KEYWORD)
            self.state = 75
            self.match(EDBSParser.COLON)
            self.state = 76
            self.param_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Output_paramsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OUTPUT_PARAM_KEYWORD(self):
            return self.getToken(EDBSParser.OUTPUT_PARAM_KEYWORD, 0)

        def COLON(self):
            return self.getToken(EDBSParser.COLON, 0)

        def IDENTIFIER(self):
            return self.getToken(EDBSParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return EDBSParser.RULE_output_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOutput_params" ):
                listener.enterOutput_params(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOutput_params" ):
                listener.exitOutput_params(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOutput_params" ):
                return visitor.visitOutput_params(self)
            else:
                return visitor.visitChildren(self)




    def output_params(self):

        localctx = EDBSParser.Output_paramsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_output_params)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(EDBSParser.OUTPUT_PARAM_KEYWORD)
            self.state = 79
            self.match(EDBSParser.COLON)
            self.state = 80
            self.match(EDBSParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Module_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def main_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EDBSParser.Main_stmtContext)
            else:
                return self.getTypedRuleContext(EDBSParser.Main_stmtContext,i)


        def getRuleIndex(self):
            return EDBSParser.RULE_module_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModule_body" ):
                listener.enterModule_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModule_body" ):
                listener.exitModule_body(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModule_body" ):
                return visitor.visitModule_body(self)
            else:
                return visitor.visitChildren(self)




    def module_body(self):

        localctx = EDBSParser.Module_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_module_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 82
                    self.main_stmt()

                else:
                    raise NoViableAltException(self)
                self.state = 85 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(EDBSParser.IDENTIFIER)
            else:
                return self.getToken(EDBSParser.IDENTIFIER, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(EDBSParser.COMMA)
            else:
                return self.getToken(EDBSParser.COMMA, i)

        def getRuleIndex(self):
            return EDBSParser.RULE_param_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam_list" ):
                listener.enterParam_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam_list" ):
                listener.exitParam_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam_list" ):
                return visitor.visitParam_list(self)
            else:
                return visitor.visitChildren(self)




    def param_list(self):

        localctx = EDBSParser.Param_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_param_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(EDBSParser.IDENTIFIER)
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 88
                self.match(EDBSParser.COMMA)
                self.state = 89
                self.match(EDBSParser.IDENTIFIER)
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Main_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(EDBSParser.StatementContext,0)


        def PERIOD(self):
            return self.getToken(EDBSParser.PERIOD, 0)

        def NEWLINE(self):
            return self.getToken(EDBSParser.NEWLINE, 0)

        def getRuleIndex(self):
            return EDBSParser.RULE_main_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain_stmt" ):
                listener.enterMain_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain_stmt" ):
                listener.exitMain_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMain_stmt" ):
                return visitor.visitMain_stmt(self)
            else:
                return visitor.visitChildren(self)




    def main_stmt(self):

        localctx = EDBSParser.Main_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_main_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.statement()
            self.state = 96
            self.match(EDBSParser.PERIOD)
            self.state = 97
            self.match(EDBSParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return EDBSParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ReadfileContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EDBSParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def READ_KEYWORD(self):
            return self.getToken(EDBSParser.READ_KEYWORD, 0)
        def FILE_KEYWORD(self):
            return self.getToken(EDBSParser.FILE_KEYWORD, 0)
        def IDENTIFIER(self):
            return self.getToken(EDBSParser.IDENTIFIER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReadfile" ):
                listener.enterReadfile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReadfile" ):
                listener.exitReadfile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReadfile" ):
                return visitor.visitReadfile(self)
            else:
                return visitor.visitChildren(self)


    class MutateContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EDBSParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def UPDATE_KEYWORD(self):
            return self.getToken(EDBSParser.UPDATE_KEYWORD, 0)
        def IDENTIFIER(self):
            return self.getToken(EDBSParser.IDENTIFIER, 0)
        def COLON(self):
            return self.getToken(EDBSParser.COLON, 0)
        def expr_op(self):
            return self.getTypedRuleContext(EDBSParser.Expr_opContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMutate" ):
                listener.enterMutate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMutate" ):
                listener.exitMutate(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMutate" ):
                return visitor.visitMutate(self)
            else:
                return visitor.visitChildren(self)


    class ReadContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EDBSParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def READ_KEYWORD(self):
            return self.getToken(EDBSParser.READ_KEYWORD, 0)
        def IDENTIFIER(self):
            return self.getToken(EDBSParser.IDENTIFIER, 0)
        def COLON(self):
            return self.getToken(EDBSParser.COLON, 0)
        def STRING(self):
            return self.getToken(EDBSParser.STRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRead" ):
                listener.enterRead(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRead" ):
                listener.exitRead(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRead" ):
                return visitor.visitRead(self)
            else:
                return visitor.visitChildren(self)


    class CalcContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EDBSParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CALC_KEYWORD(self):
            return self.getToken(EDBSParser.CALC_KEYWORD, 0)
        def IDENTIFIER(self):
            return self.getToken(EDBSParser.IDENTIFIER, 0)
        def COLON(self):
            return self.getToken(EDBSParser.COLON, 0)
        def expr_op(self):
            return self.getTypedRuleContext(EDBSParser.Expr_opContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCalc" ):
                listener.enterCalc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCalc" ):
                listener.exitCalc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCalc" ):
                return visitor.visitCalc(self)
            else:
                return visitor.visitChildren(self)


    class WhileContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EDBSParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def REPEAT_KEYWORD(self):
            return self.getToken(EDBSParser.REPEAT_KEYWORD, 0)
        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EDBSParser.StatementContext)
            else:
                return self.getTypedRuleContext(EDBSParser.StatementContext,i)

        def CONDITION_KEYWORD(self):
            return self.getToken(EDBSParser.CONDITION_KEYWORD, 0)
        def bool_expr(self):
            return self.getTypedRuleContext(EDBSParser.Bool_exprContext,0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(EDBSParser.NEWLINE)
            else:
                return self.getToken(EDBSParser.NEWLINE, i)
        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(EDBSParser.COMMA)
            else:
                return self.getToken(EDBSParser.COMMA, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile" ):
                listener.enterWhile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile" ):
                listener.exitWhile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile" ):
                return visitor.visitWhile(self)
            else:
                return visitor.visitChildren(self)


    class WriteContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EDBSParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WRITE_KEYWORD(self):
            return self.getToken(EDBSParser.WRITE_KEYWORD, 0)
        def write_arg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EDBSParser.Write_argContext)
            else:
                return self.getTypedRuleContext(EDBSParser.Write_argContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWrite" ):
                listener.enterWrite(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWrite" ):
                listener.exitWrite(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWrite" ):
                return visitor.visitWrite(self)
            else:
                return visitor.visitChildren(self)


    class ReturnContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EDBSParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def EXIT_KEYWORD(self):
            return self.getToken(EDBSParser.EXIT_KEYWORD, 0)
        def EXCLAMATION(self):
            return self.getToken(EDBSParser.EXCLAMATION, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn" ):
                listener.enterReturn(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn" ):
                listener.exitReturn(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturn" ):
                return visitor.visitReturn(self)
            else:
                return visitor.visitChildren(self)



    def statement(self):

        localctx = EDBSParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 143
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                localctx = EDBSParser.WhileContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                self.match(EDBSParser.REPEAT_KEYWORD)
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==56:
                    self.state = 100
                    self.match(EDBSParser.NEWLINE)


                self.state = 103
                self.statement()
                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==4:
                    self.state = 104
                    self.match(EDBSParser.COMMA)
                    self.state = 106
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==56:
                        self.state = 105
                        self.match(EDBSParser.NEWLINE)


                    self.state = 108
                    self.statement()
                    self.state = 113
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==56:
                    self.state = 114
                    self.match(EDBSParser.NEWLINE)


                self.state = 117
                self.match(EDBSParser.CONDITION_KEYWORD)
                self.state = 118
                self.bool_expr(0)
                pass

            elif la_ == 2:
                localctx = EDBSParser.MutateContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 120
                self.match(EDBSParser.UPDATE_KEYWORD)
                self.state = 121
                self.match(EDBSParser.IDENTIFIER)
                self.state = 122
                self.match(EDBSParser.COLON)
                self.state = 123
                self.expr_op(0)
                pass

            elif la_ == 3:
                localctx = EDBSParser.WriteContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 124
                self.match(EDBSParser.WRITE_KEYWORD)
                self.state = 126 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 125
                    self.write_arg()
                    self.state = 128 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==52 or _la==53):
                        break

                pass

            elif la_ == 4:
                localctx = EDBSParser.CalcContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 130
                self.match(EDBSParser.CALC_KEYWORD)
                self.state = 131
                self.match(EDBSParser.IDENTIFIER)
                self.state = 132
                self.match(EDBSParser.COLON)
                self.state = 133
                self.expr_op(0)
                pass
